# EtherealChaosCipher

./: A Lightweight Symmetric Encryption - Ethereal Chaos Algorithm Technical Details and Cryptographic Paper(Chinese).md  A Lightweight Symmetric Encryption - Ethereal Chaos Algorithm Technical Details and Cryptographic Paper.md  AES.hpp  CMakeLists.txt  EtherealChaos.hpp  main.cpp
